fixes about section overflow and height

--- a/styles/index.processed.css
+++ b/styles/index.processed.css
@@ -158,6 +158,8 @@ button.about {
   border: 1px solid #888;
   border-radius: 5px;
   width: 80%;
+  height: 60%;
+  overflow: scroll;
   max-width: 600px;
 }
 
