--- a/styles/index.scss
+++ b/styles/index.scss
@@ -169,6 +169,8 @@ button.about {
     border: 1px solid #888;
     border-radius: 5px;
     width: 80%;
+    height: 60%;
+    overflow: scroll;
     max-width: 600px;
 }
 
